(executable
 (package missing_blocks_auditor)
 (name missing_blocks_auditor)
 (public_name missing_blocks_auditor)
 (libraries
   async_kernel
   core
   caqti
   caqti-async
   caqti-driver-postgresql
   coda_base
   coda_state
   genesis_constants
   genesis_ledger_helper
   yojson
 )
 (preprocessor_deps ../../config.mlh)
 (instrumentation (backend bisect_ppx))
 (preprocess (pps ppx_coda ppx_version ppx_let ppx_sexp_conv
                  ppx_hash ppx_compare ppx_deriving_yojson)))
